Fix spacing

--- a/_sass/sections/_01-introduction.scss
+++ b/_sass/sections/_01-introduction.scss
@@ -1,6 +1,6 @@
 #introduction {
   @media (min-width: 1024px) {
-    .intro__content p {
+    .intro__content {
       margin-bottom: $spacing-06;
     }
   }
